test/shouldPass/vonVolker/test17.pas
program test17;
function a(): integer;
begin
    a := 1;
end;
function b(): string;
begin
    b := 'hi';
end;

begin

end.