test/shouldFail/expr/modStr.pas
program Sample;
var
  x, y: string;
begin
  writeln(x mod y);
//        ^^^^^^^
// Operator 'mod' cannot be applied to string and string
end.
